--- a/styles.css
+++ b/styles.css
@@ -24,10 +24,15 @@ html, body {
     margin: 30px;
 }
 .img2 {
-    height: 60px;
-    width: 224px;    
+    margin-top: 25px;
+    height: 50px;
+    width: 190px;    
 }
 .redirect {
     color: black;
     font-size: 75%;
+}
+#ad-btn {
+    background-color:rgb(9, 116, 240);
+    color: white;
 }
